# image-segmentation

./: CMakeLists.txt  LICENSE  README.md
src/: AlignedAlloc.cpp  AlignedAlloc.hpp  AlignedAlloc32.cpp  AlignedAlloc32.hpp  CMakeLists.txt  Segment.cpp  Segment.hpp  aligned_alloc.cpp  aligned_alloc.hpp  aligned_alloc_32.cpp  aligned_alloc_32.hpp  main.cpp  segment.cpp  segment.hpp
